# OpenGLLearn

./: .gitignore  .gitmodules  README.md
Shader/: CMakeLists.txt  shader.vs  triangle.cpp  triangle2.cpp  triangle3.cpp  triangle4.cpp
Test/: CMakeLists.txt  launch.cpp  test.cpp  testdll.cpp  testdll.h
Textures/: CMakeLists.txt  screen.fs  screen.vs  shader.vs  texture.cpp  texture.fs  texture2.cpp  texture2.fs  texture3.cpp  texture3.vs  texture4.cpp  texture4.fs  texture4.vs  texture5.cpp  texture6.cpp  texture7.cpp  texture8.cpp  texture9.cpp  triangle.cpp
Triangle/: CMakeLists.txt  triangle.cpp  triangle2.cpp  triangle3.cpp
libs/opengl/glad/include/glad/: glad.h
libs/opengl/glad/src/: glad.c
libs/opengl/shader/: LocalShaderReader.cpp  LocalShaderReader.h  SimpleShader.cpp  SimpleShader.h
